src/test/ui/rfc-2497-if-let-chains/feature-gate-enhanced_binary_op.stderr
error[E0381]: use of possibly-uninitialized variable: `z`
  --> $DIR/feature-gate-enhanced_binary_op.rs:15:37
   |
LL |     if false || { z = 3; false } || z == 3 {}
   |                                     ^ use of possibly-uninitialized `z`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
